[tool.poetry]
name = "weather"
version = "0.1.0"
description = ""
authors = ["Arvind-4 <lordarvindthegamer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = ">=3.2,<3.3"
whitenoise = "^6.6.0"
requests = "^2.31.0"
python-decouple = "^3.8"


[tool.poetry.group.dev.dependencies]
djlint = "^1.34.0"
black = "^23.11.0"
pylint = "^3.0.2"
isort = "^5.12.0"
autoflake = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
